# DeepGWBSE

./: .gitignore  README.md  collect_tool.py  flows-augmentation.py  flows.py  mbformer_bse.py  mbformer_data.py  mbformer_gw.py  mbformer_gwbse.py  mbformer_vae.py  pyproject.toml
config/: fp_augconfig.json  fpconfig.json  single_mat_config.json
deep_gwbse/: README.md  collect_tool.py  flow.py  fptask.py  utils.py
deep_gwbse/config/: fpconfig.json  unwanted.json
deep_gwbse/from_bgwpy/BGW/: epsilontask.py  inputs.py  inteqptask.py  kgrid.py  kgrid_x.py  sigmatask.py
deep_gwbse/from_bgwpy/DFT/: dfttask.py
deep_gwbse/from_bgwpy/QE/: constructor.py  optimize_funs.py  pseudobands_str.py  qebgwflow.py  qebgwtask.py
deep_gwbse/from_bgwpy/config/: __init__.py
deep_gwbse/from_bgwpy/core/: workflow.py
deep_gwbse/from_c2db/: control.py  from_c2db.py  job_control.py  material_filter.py  sql2hdf.jl
deep_gwbse/from_model/: basisassembly.py  bsetrainer.py  data.py  e2vae.py  e2vaetrainer.py  e3vae.py  gwtrainer.py  interface.py  model_util.py  posemb.py  trainer.py  transformer.py  useful_paper.md  vaetrainer.py  wfnembedder.py  wigner.py  wigner3d.py
deep_gwbse/from_model/unittest/: e2vae.py  e2vae_train_test.py  e2vae_train_with_trainer.py  model_util.py  trainer.py  vae_e2_mnist.pth
deep_gwbse/from_oncvpsp/pp_base/: nc-sr-05_pbe_standard_psml.tgz
examples/: nc300.tar
examples/flows/mat-5/: config.json  stru.cif
examples/flows/mat-5/01-density/: run.sh  scf.out  wfn.pp.in
examples/flows/mat-5/02-wfn/: pw2bgw.run.sh  run.sh  wfn.h5
examples/flows/mat-5/03-wfnq/: wfn.in
examples/flows/mat-5/05-band/: pw2bgw.run.sh
examples/flows/mat-5/06-wfnq-nns/: run.sh  wfn.head.in
examples/flows/mat-5/07-aobasis/: aobasis.run
examples/flows/mat-5/11-epsilon/: epsilon.inp  run.sh
examples/flows/mat-5/12-epsilon-nns/: epsilon.head.in  run.sh
examples/flows/mat-5/13-sigma/: sigma.out
examples/flows/mat-5/14-inteqp/: inteqp.inp
examples/flows/mat-5/16-reconstruction/: calc.json
examples/flows/mat-5/17-wfn_fi/: wfn.out
examples/flows/mat-5/18-kernel/: run.sh
examples/flows/mat-6/01-density/: scf.in
examples/flows/mat-6/02-wfn/: para.sh  wfn.in  wfn.out  wfn.pp.in
examples/flows/mat-6/03-wfnq/: pseudo.sh  pseudobands.py  run.sh  (+1 more)
examples/flows/mat-7/: config.json  run.sh
examples/fp-input/hBN-AAp/: stru.cif
examples/fp-input/mat-3/: stru.cif
examples/fp-input/mat-5/: stru.cif
examples/fp-input/mat-7/: stru.cif
examples/fp-input/mat-8/: stru.cif
(+34 files in other folders)
